--- a/.github/workflows/kalshi_crawl.yml
+++ b/.github/workflows/kalshi_crawl.yml
@@ -3,8 +3,8 @@ name: Kalshi Crawl + Fan-out (auto-create repos)
 on:
   workflow_dispatch:
   schedule:
-    # Every 6 hours (UTC). Adjust as needed.
-    - cron: "0 */6 * * *"
+    # Run at KST 00:00/06:00/12:00/18:00 (UTC 15:00/21:00/03:00/09:00).
+    - cron: "0 15,21,3,9 * * *"
 
 concurrency:
   group: kalshi-crawl-fanout
@@ -16,6 +16,21 @@ permissions:
 jobs:
   crawl:
     runs-on: ubuntu-latest
+
+    env:
+      GH_PAT: ${{ secrets.GH_PAT }}
+      KALSHI_BASE_URL: "https://api.elections.kalshi.com/trade-api/v2"
+      KALSHI_SLEEP_SEC: "0.05"
+      KALSHI_LOG_EVERY: "50"
+      KALSHI_EVENT_BACKFILL_SEC: "172800"
+      KALSHI_MARKET_BACKFILL_SEC: "120"
+      KALSHI_LIMIT_EVENTS: "200"
+      KALSHI_LIMIT_MARKETS: "1000"
+      TIME_BUDGET_SECONDS: "19800"   # 5.5h safety under 6h
+      FINISH_BEFORE_NEXT_SCHEDULE_MINUTES: "15"
+      SCHEDULE_KST_HOURS: "0,6,12,18"
+      GIT_AUTHOR_NAME: "github-actions[bot]"
+      GIT_AUTHOR_EMAIL: "github-actions[bot]@users.noreply.github.com"
     steps:
       - name: Checkout orchestrator repo
         uses: actions/checkout@v4
