--- a/.github/workflows/kalshi_crawl.yml
+++ b/.github/workflows/kalshi_crawl.yml
@@ -24,7 +24,6 @@ jobs:
       KALSHI_LOG_EVERY: "50"
       KALSHI_EVENT_BACKFILL_SEC: "172800"
       KALSHI_MARKET_BACKFILL_SEC: "120"
-<<<<<<< HEAD
       KALSHI_LIMIT_EVENTS: "200"
       KALSHI_LIMIT_MARKETS: "1000"
       TIME_BUDGET_SECONDS: "19800"   # 5.5h safety under 6h
@@ -32,23 +31,6 @@ jobs:
       SCHEDULE_KST_HOURS: "0,6,12,18"
       GIT_AUTHOR_NAME: "github-actions[bot]"
       GIT_AUTHOR_EMAIL: "github-actions[bot]@users.noreply.github.com"
-=======
-
-      # Resume-friendly safety budget under GitHub 6h job limit
-<<<<<<< HEAD
-      TIME_BUDGET_SECONDS: "19800"   # upper bound; script caps to next schedule - 15min   # 5.5h
-=======
-      TIME_BUDGET_SECONDS: "21600"   # upper bound; script caps to next schedule - 15min   # 5.5h
->>>>>>> origin/main
-
-      # Pull as much as possible per request
-      KALSHI_LIMIT_EVENTS: "200"
-      KALSHI_LIMIT_MARKETS: "1000"
-
-      GIT_AUTHOR_NAME: "github-actions[bot]"
-      GIT_AUTHOR_EMAIL: "github-actions[bot]@users.noreply.github.com"
-
->>>>>>> origin/main
     steps:
       - name: Checkout orchestrator repo
         uses: actions/checkout@v4
@@ -66,6 +48,15 @@ jobs:
           pip install requests
 
       - name: Crawl + fan-out push (auto-create repos)
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
+          KALSHI_BASE_URL: "https://api.elections.kalshi.com/trade-api/v2"
+          KALSHI_SLEEP_SEC: "0.05"
+          KALSHI_LOG_EVERY: "50"
+          KALSHI_EVENT_BACKFILL_SEC: "172800"
+          KALSHI_MARKET_BACKFILL_SEC: "120"
+          GIT_AUTHOR_NAME: "github-actions[bot]"
+          GIT_AUTHOR_EMAIL: "github-actions[bot]@users.noreply.github.com"
         run: |
           python scripts/kalshi_crawl_and_fanout.py
 
@@ -75,8 +66,8 @@ jobs:
             echo "No orchestrator changes."
             exit 0
           fi
-          git config user.name "${GIT_AUTHOR_NAME}"
-          git config user.email "${GIT_AUTHOR_EMAIL}"
+          git config user.name "${GIT_AUTHOR_NAME:-github-actions[bot]}"
+          git config user.email "${GIT_AUTHOR_EMAIL:-github-actions[bot]@users.noreply.github.com}"
           git add -A
           git commit -m "kalshi: update state/targets (auto)"
           git push
