--- a/.github/workflows/kalshi_crawl.yml
+++ b/.github/workflows/kalshi_crawl.yml
@@ -1,64 +1,31 @@
-name: Kalshi Crawl + Fan-out (auto-create repos)
+name: Kalshi Crawl + Fan-out (Enhanced Sync)
 
 on:
   workflow_dispatch:
   schedule:
-    # Run at KST 00:00/06:00/12:00/18:00 (UTC 15:00/21:00/03:00/09:00).
     - cron: "0 15,21,3,9 * * *"
 
-concurrency:
-  group: kalshi-crawl-fanout
-  cancel-in-progress: false
-
 permissions:
-  contents: write
+  [cite_start]contents: write # Orchestrator에 상태를 쓰기 위해 필수 
 
 jobs:
   crawl:
     runs-on: ubuntu-latest
-
     env:
       GH_PAT: ${{ secrets.GH_PAT }}
-      KALSHI_BASE_URL: "https://api.elections.kalshi.com/trade-api/v2"
-      KALSHI_SLEEP_SEC: "0.05"
-      KALSHI_LOG_EVERY: "50"
-      KALSHI_EVENT_BACKFILL_SEC: "172800"
-      KALSHI_MARKET_BACKFILL_SEC: "120"
-      KALSHI_LIMIT_EVENTS: "200"
-      KALSHI_LIMIT_MARKETS: "1000"
-      TIME_BUDGET_SECONDS: "19800"   # 5.5h safety under 6h
-      FINISH_BEFORE_NEXT_SCHEDULE_MINUTES: "15"
-      SCHEDULE_KST_HOURS: "0,6,12,18"
-      GIT_AUTHOR_NAME: "github-actions[bot]"
-      GIT_AUTHOR_EMAIL: "github-actions[bot]@users.noreply.github.com"
+      REPO_MAX_BYTES: "1073741824" # 1GiB 기준 분할
     steps:
-      - name: Checkout orchestrator repo
+      - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: 1
+          fetch-depth: 0 # 전체 히스토리 필요
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install deps
+      - name: Run Crawler
         run: |
-          python -m pip install --upgrade pip
           pip install requests
-
-      - name: Crawl + fan-out push (auto-create repos)
-        run: |
           python scripts/kalshi_crawl_and_fanout.py
-
-      - name: Commit & push orchestrator updates (state/targets/stats)
-        run: |
-          if git diff --quiet; then
-            echo "No orchestrator changes."
-            exit 0
-          fi
-          git config user.name "${GIT_AUTHOR_NAME:-github-actions[bot]}"
-          git config user.email "${GIT_AUTHOR_EMAIL:-github-actions[bot]@users.noreply.github.com}"
-          git add -A
-          git commit -m "kalshi: update state/targets (auto)"
-          git push
