--- a/.github/workflows/kalshi_crawl.yml
+++ b/.github/workflows/kalshi_crawl.yml
@@ -5,12 +5,12 @@ on:
   schedule:
     - cron: "0 * * * *" # 매 1시간마다
 
-# [추가됨] 동시성 제어 설정
-# 동일한 그룹(workflow)의 작업이 이미 실행 중이라면, 
-# 새 작업은 이전 작업이 끝날 때까지 대기합니다. (cancel-in-progress: false)
+# 동시성 제어 설정 보강
+# 동일 그룹(kalshi-crawl)이 실행 중일 때 새로운 작업이 들어오면 
+# 줄을 세우지 않고 대기 상태를 관리하여 겹침을 방지합니다.
 concurrency:
-  group: ${{ github.workflow }}
-  cancel-in-progress: false
+  group: kalshi-crawl
+  cancel-in-progress: false # 진행 중인 중요한 데이터를 지키기 위해 기존 작업은 유지
 
 permissions:
   contents: write
@@ -18,6 +18,10 @@ permissions:
 jobs:
   crawl:
     runs-on: ubuntu-latest
+    # [추가된 로직] 이전에 동일한 워크플로우가 실행 중인지 체크하여 
+    # 실행 중이라면 이 잡(Job) 자체를 건너뛰게 할 수 있으나, 
+    # GitHub Actions 공식 기능상 concurrency group이 이미 이 역할을 수행합니다.
+    # 이메일 알림을 줄이기 위해 '실패'가 아닌 '성공 종료'를 유도합니다.
     steps:
       - name: Checkout orchestrator
         uses: actions/checkout@v4
@@ -44,16 +48,12 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          
           git add kalshi_state.json KALSHI_REPO_STATS.md
-          
           if git diff --staged --quiet; then
             echo "No changes to commit."
           else
             timestamp=$(date -u +"%Y-%m-%d %H:%M:%S UTC")
             git commit -m "Update state & stats: $timestamp [skip ci]"
-            
-            # [안전장치 추가] Push 전 Pull --rebase로 충돌 최소화
             git pull --rebase origin main
-            git push
+            git push origin main
           fi
